--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,12 +4,11 @@ upstream config {
 }
 
 server {
-    listen 80;
-    return 301 https://$host$request_uri;
-}
-
-server {
     listen      443 ssl;
+    listen [::]:443 ssl;
+    server_name $SERVER_NAME;
+
+   
     ssl_certificate        /etc/nginx/cert.crt;
     ssl_certificate_key    /etc/nginx/certkey.key;
     ssl_session_cache  builtin:1000  shared:SSL:10m;
