--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,10 +2,13 @@ upstream config {
     ip_hash;
     server web1:443;
 }
-
 server {
-    listen      443 ssl;
-    listen [::]:443 ssl;
+   listen 80;
+   return 301 https://$host$request_uri;
+}
+server {
+    listen      443 ssl default_server;
+    listen [::]:443 ssl default_server;
     server_name $SERVER_NAME;
 
    
@@ -24,4 +27,5 @@ server {
       proxy_read_timeout  90;
       proxy_redirect off;
     }
+    
   }
